examples/test/testpolicy2309.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2309
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key19: value14
      key2: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value28
          key36: value42
          key24: value3
      podSelector:
        matchLabels:
          key46: value27
          key6: value26
